Add property rough version
